Create bootstrap layout and add images

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
+
+img {
+  height: 390px;
+  width: 500px;
+}
+
+button {
+  background-color: #257bf5;
+}
+
+.internet-bar {
+  background-color: #eba434;
+  height: 3rem;
+}
